# File-Encryption-and-Decryption

./: CMakeLists.txt  README.md  cpp.hint  create_file_dialog.cpp  create_file_dialog.h  create_file_page.cpp  create_file_page.h  decrypt_file_dialog.cpp  decrypt_file_dialog.h  delete_file_dialog.cpp  delete_file_dialog.h  enc_dec_logic.cpp  enc_dec_logic.h  encrypt_file_dialog.cpp  encrypt_file_dialog.h  main.cpp  menu_page.cpp  menu_page.h  resources.qrc  template.cpp  template.h  write_file_dialog.cpp  write_file_dialog.h
Header Files/: createdeletetemplate.h  createpage.h  decryptpage.h  deletepage.h  encdeclogic.h  encdectemplate.h  encryptpage.h  menupage.h  page.h  writepage.h
Source Files/: Create_Delete_Template_GUI.cpp  Create_Page_GUI.cpp  Decrypt_Page_GUI.cpp  Delete_Page_GUI.cpp  Encrypt_Page_GUI.cpp  FIle_Enc_Dec_Logic.cpp  Main.cpp  Menu_Page_GUI.cpp  Page_GUI.cpp  Write_Page_GUI.cpp
